--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+ .text{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+  font-weight: bold;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text:hover{
+  color: black;
+  text-decoration: none;
 }
+ 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn{
+  background-color: black !important; 
+  color:#fcd232 !important ;
+  border-color: black !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover{
+  background-color: rgba(0, 0, 0, 0.767) !important;
+  border-color: rgba(0, 0, 0, 0.767) !important;
 }
