--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -1,20 +1,80 @@
  .text{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: black;
-  font-weight: bold;
+  font-weight:  700;
 }
 .text:hover{
   color: black;
   text-decoration: none;
 }
  
+.black-button{
+  
+  background-color: black; 
+  color:#fcd232;
+  border-color: black;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px 7px 7px 5px;
+}
 
-.btn{
-  background-color: black !important; 
-  color:#fcd232 !important ;
-  border-color: black !important;
+.black-button:hover{
+  background-color: rgba(0, 0, 0, 0.767);
+  border-color: rgba(0, 0, 0, 0.767);
 }
-.btn:hover{
-  background-color: rgba(0, 0, 0, 0.767) !important;
-  border-color: rgba(0, 0, 0, 0.767) !important;
+.Footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-top: 2px solid #c4c4c4;
+  background-color: #f5f5f5;
 }
+.bottom-section{
+
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  background-color: #e7e7e7 ;
+}
+.bottom-section p{
+  font-weight: bold;
+  font-size: 13px;
+  margin-top: 1.2rem;
+}
+span{
+  display: inline-block;
+}
+.boldText{
+  font-weight: bold;
+}
+ul{
+  list-style-type: none;
+  padding-left: 0;
+  font-size: 13px;
+  font-weight: 600;
+  
+}
+li{
+  margin: 5px 0 6px 0;
+  
+}
+.icon{
+  font-size: 2rem;
+  margin: 5px 15px 0 0;
+}
+.facebook{
+  color: #3b5998;
+}
+.linkedin{
+  color: #0e76a8;
+  border-radius: 50%;
+  
+}
+.instagram{
+  color: #c13584;
+}
+.logo{
+  height: 50px;
+}
+
