--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -22,16 +22,14 @@
   border-color: rgba(0, 0, 0, 0.767);
 }
 .Footer{
-  position: absolute;
-  bottom: 0;
+ 
   width: 100%;
   border-top: 2px solid #c4c4c4;
   background-color: #f5f5f5;
 }
 .bottom-section{
 
-  position: absolute;
-  bottom: 0;
+  
   width: 100%;
   height: 60px;
   text-align: center;
@@ -76,5 +74,19 @@ li{
 }
 .logo{
   height: 50px;
+}
+.title{
+  text-align: center;
+  margin-bottom: 2rem;
+  
+}
+.arrow-btn{
+  color: black;
+  font-size: 2rem;
+  display: inline-block;
+ margin-left: 85%;
+}
+.arrow-btn:hover{
+  color: rgba(0, 0, 0, 0.671);
 }
 
