--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -1,92 +1,173 @@
- .text{
-  color: black;
-  font-weight:  700;
+.main{
+  margin: 0 100px 0 100px;
 }
-.text:hover{
+.text {
+  color: black;
+  font-weight: 700;
+}
+.text:hover {
   color: black;
   text-decoration: none;
 }
- 
-.black-button{
+.black-button-navbar{
+  background-color: black;
+  color: #fcd232;
   
-  background-color: black; 
-  color:#fcd232;
-  border-color: black;
   border: 1px solid black;
   border-radius: 5px;
   padding: 5px 7px 7px 5px;
 }
+.black-button {
+  background-color: black;
+  color: #fcd232;
+  
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px 7px 7px 5px;
+  /* box-shadow: 25px  15px 70px rgba(0, 0, 0, 0.425); */
+  box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+-webkit-box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+-moz-box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+}
+.yellow-button {
+  background-color: #fcd232;
+  color: black;
+  
+  border: 1px solid #fcd232;
+  border-radius: 5px;
+  padding: 5px 7px 7px 5px;
+  box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+  -webkit-box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+  -moz-box-shadow: 17px 31px 65px -1px rgba(158,158,158,0.75);
+}
 
-.black-button:hover{
+
+.black-button:hover {
   background-color: rgba(0, 0, 0, 0.767);
   border-color: rgba(0, 0, 0, 0.767);
 }
-.Footer{
- 
+.Footer {
   width: 100%;
   border-top: 2px solid #c4c4c4;
   background-color: #f5f5f5;
 }
-.bottom-section{
-
-  
+.bottom-section {
   width: 100%;
   height: 60px;
   text-align: center;
-  background-color: #e7e7e7 ;
+  background-color: #e7e7e7;
+  padding-top: 1.3rem;
+  
+  
 }
-.bottom-section p{
+.bottom-section p {
   font-weight: bold;
   font-size: 13px;
-  margin-top: 1.2rem;
+ 
 }
-span{
+span {
   display: inline-block;
 }
-.boldText{
-  font-weight: bold;
+.text-bold {
+  font-weight: bold !important;
 }
-ul{
+
+ul {
   list-style-type: none;
   padding-left: 0;
   font-size: 13px;
   font-weight: 600;
-  
 }
-li{
+li {
   margin: 5px 0 6px 0;
-  
 }
-.icon{
+.icon {
   font-size: 2rem;
   margin: 5px 15px 0 0;
 }
-.facebook{
+.facebook {
   color: #3b5998;
 }
-.linkedin{
+.linkedin {
   color: #0e76a8;
   border-radius: 50%;
-  
 }
-.instagram{
+.instagram {
   color: #c13584;
 }
-.logo{
+.logo {
   height: 50px;
 }
-.title{
+.title {
   text-align: center;
   margin-bottom: 2rem;
+}
+.arrow-btn {
+  color: black;
+  font-size: 3rem;
+  display: inline-block;
+  margin-left: 85%;
+}
+.arrow-btn:hover {
+  color: rgba(0, 0, 0, 0.671);
+}
+
+.Banner {
+  background-image: url("./assets/img/banner_img.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-top: 15px;
+  margin-bottom: 30px;
   
 }
-.arrow-btn{
-  color: black;
-  font-size: 2rem;
-  display: inline-block;
- margin-left: 85%;
+.wrapper{
+  position: relative;
 }
-.arrow-btn:hover{
-  color: rgba(0, 0, 0, 0.671);
+.overlay{
+  position: absolute;
+  top: 0;
+	bottom:0;
+	left: 0;
+	right:0;
+	width: 100%;
+	height: 500px;
+	z-index: 100;
+	background-color: rgba(0, 0, 0, 0.5);
+	background-position:center;
+}
+.Banner div {
+  width: 60%;
+}
+
+.Banner h1 {
+  font-weight: 500;
+  padding: 0 15px;
+  color: #fff;
+  margin: 0;
+  text-align: center;
+  font-size: 63px;
+  z-index: 101;
+  position: relative;
+  z-index: 101;
+}
+.padding-custom{
+ margin: auto;
+ padding: 0 100px 0 100px !important;
+}
+.img-right{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.paragrapgh{
+  font-size: 1.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
