--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -46,6 +46,10 @@
   background-color: rgba(0, 0, 0, 0.767);
   border-color: rgba(0, 0, 0, 0.767);
 }
+.yellow-button:hover{
+  background-color: #fcd43288;
+  border-color:#fcd43288;
+}
 .Footer {
   width: 100%;
   border-top: 2px solid #c4c4c4;
@@ -170,4 +174,58 @@ li {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.text-linetrough{
+  text-decoration: line-through;
+}
+.pill{
+  display: inline-block;
+  background-color: #fcd232;
+  border-radius: 17px;
+  font-size: 13px;
+
+  text-decoration: none;
+  padding: 7px 13px;
+  margin-bottom: 10px;
+}
+
+.BottomBanner{
+  margin: 100px 0;
+}
+.BottomBanner h1{
+ font-size: 3.5rem;
+}
+.BottomBanner p{
+  font-size: 2rem;
+}
+
+.img-overlay{
+  position: absolute;
+  top: 0;
+	bottom:0;
+	left: 0;
+	right:0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	background-position:center;
+}
+.red{
+  background-color:rgba(145, 7, 7, 0.623) ;
+}
+.green{
+  background-color: rgba(3, 88, 21, 0.623);
+}
+.purple{
+  background-color: rgba(101, 5, 114, 0.623);
+}
+.blue{
+  background-color: rgba(33, 22, 131, 0.623);
+}
+.teal{
+  background-color: rgba(2, 97, 57, 0.623);
+}
+.iconSize{
+  font-size: 20px;
+}
+
 
