--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -4,7 +4,7 @@
 .text {
   display: inline-block;
   color: black;
-  font-weight: 700;
+  
 }
 .text:hover {
   color: black;
@@ -191,7 +191,7 @@ li {
 }
 .btn-linetrough:hover{
   background-color: black;
-  cursor: default;
+  
 }
 .pill{
   display: inline-block;
@@ -278,6 +278,100 @@ li {
 .card-link:hover{
   text-decoration: none;
   color: black;
+}
+
+label{
+  font-size: 14px;
+  font-weight: 600;
+}
+.no-button{
+  background-color: transparent;
+  border: 0;
+}
+
+
+p.lorem-text {
+  text-align: justify;
+}
+
+.modal-cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 101;
+  transform: translateZ(0);
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 2.5em 1.5em 1.5em 1.5em;
+  background-color: #ffffff;
+  border-radius: 3px;
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+@media screen and (min-width: 500px) {
+  /* Center the Modal! */
+  .modal-area {
+    left: 50%;
+    top: 50%;
+    height: auto;
+    transform: translate(-50%, -50%);
+    max-width: 30em;
+    max-height: calc(100% - 1em);
+  }
+}
+
+._modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.2em;
+  margin: 10px;
+  line-height: 1;
+  border-color: transparent;
+  background: black;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+._modal-close-icon {
+  width: 25px;
+  height: 25px;
+  fill: transparent;
+  stroke:#fcd232;
+  stroke-linecap: round;
+  stroke-width: 5;
+}
+
+.modal-body {
+  padding-top: 0.25em;
+ 
+}
+._hide-visual {
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
+}
+
+.scroll-lock {
+  overflow: hidden;
+  margin-right: 17px;
 }
 
 @media (max-width:576px){
