--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -1,3 +1,6 @@
+html{
+  scroll-behavior: smooth;
+}
 .main{
   margin: 0 100px 0 100px;
 }
@@ -289,8 +292,12 @@ label{
   border: 0;
 }
 
+.modalBootstrap{
+  position: absolute;
+  
+}
 
-p.lorem-text {
+/* p.lorem-text {
   text-align: justify;
 }
 
@@ -320,7 +327,7 @@ p.lorem-text {
 }
 
 @media screen and (min-width: 500px) {
-  /* Center the Modal! */
+  Center the Modal!
   .modal-area {
     left: 50%;
     top: 50%;
@@ -372,7 +379,9 @@ p.lorem-text {
 .scroll-lock {
   overflow: hidden;
   margin-right: 17px;
-}
+} */
+
+
 
 @media (max-width:576px){
 .main{
@@ -383,7 +392,15 @@ p.lorem-text {
 .marg{
   padding-bottom: 20px;
   }
+
 }
+@media (max-width:768px) {
+  .small-image{
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
 @media (max-width:1620px){
   .marg{
