--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -13,6 +13,9 @@ html{
   color: black;
   text-decoration: none;
 }
+.LinkS{
+  display: inline;
+}
 
 .card-line::after{
   content: '';
@@ -56,10 +59,13 @@ transition: background-color .5s;
   transition: background-color .5s;
 }
 
-
+.no-link:hover{
+  text-decoration: none;
+}
 .black-button:hover {
   background-color: rgba(0, 0, 0, 0.767);
   transition: background-color  .5s;
+  text-decoration: none;
   
 }
 
@@ -190,7 +196,7 @@ li {
   padding-bottom: 2rem;
 }
 .text-linetrough{
-  text-decoration: line-through;
+  text-decoration: line-through !important;
 }
 .btn-linetrough:hover{
   background-color: black;
@@ -267,12 +273,25 @@ li {
   margin-right: 5px;
   font-size: 2rem;
 }
+.box-image{
+  box-sizing: border-box;
+}
 
 .card-lift{
   -webkit-transition-duration: 0.4s;
 }
+
+
 .card-lift:hover{
   box-shadow: 0 14px 18px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  
+}
+.scale{
+  
+  transition: transform 0.2s;
+}
+.scale:hover{
+  transform: scale(1.07);
 }
 
 .card-link{
@@ -296,91 +315,39 @@ label{
   position: absolute;
   
 }
-
-/* p.lorem-text {
-  text-align: justify;
+.close{
+  background-color: black !important;
+  border-radius: 50% !important;
+  margin-top: 1px !important;
+  margin-right: 1px !important ;
+  margin-bottom: 1px !important;
+  padding: 10px !important;
+  padding-bottom: 13px !important;
+  padding-top: 8px !important;
+  color: #fcd232  !important;
+  opacity: 1 !important;
+  line-height: 0.8 !important;
+  
 }
-
-.modal-cover {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 101;
-  transform: translateZ(0);
-  background-color: rgba(0, 0, 0, 0.8);
+.Events{
+  height: 100vh;
+  text-align: center;
 }
-
-.modal-area {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 2.5em 1.5em 1.5em 1.5em;
-  background-color: #ffffff;
-  border-radius: 3px;
-  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.1);
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-@media screen and (min-width: 500px) {
-  Center the Modal!
-  .modal-area {
-    left: 50%;
-    top: 50%;
-    height: auto;
-    transform: translate(-50%, -50%);
-    max-width: 30em;
-    max-height: calc(100% - 1em);
-  }
-}
-
-._modal-close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 0.2em;
-  margin: 10px;
-  line-height: 1;
+.backToTop{
+  color: #fcd232;
+  background-color: black;
+  opacity: 0.8;
   border-color: transparent;
-  background: black;
-  border-radius: 50%;
+  font-size: 2rem;
   cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 7%;
+  right: 2%;
+  z-index: 200;
 }
-
-._modal-close-icon {
-  width: 25px;
-  height: 25px;
-  fill: transparent;
-  stroke:#fcd232;
-  stroke-linecap: round;
-  stroke-width: 5;
-}
-
-.modal-body {
-  padding-top: 0.25em;
- 
-}
-._hide-visual {
-  border: 0 !important;
-  clip: rect(0 0 0 0) !important;
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
-  white-space: nowrap !important;
-}
-
-.scroll-lock {
-  overflow: hidden;
-  margin-right: 17px;
-} */
-
 
 
 @media (max-width:576px){
