--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -1,6 +1,9 @@
 html{
   scroll-behavior: smooth;
 }
+p{
+  font-weight: lighter;
+}
 .main{
   margin: 0 100px 0 100px;
 }
@@ -207,7 +210,6 @@ li {
   background-color: #fcd232;
   border-radius: 17px;
   font-size: 13px;
-
   text-decoration: none;
   padding: 7px 13px;
   margin-bottom: 10px;
@@ -316,17 +318,19 @@ label{
   
 }
 .close{
+  /* width: 30px;
+  height: 30px; */
   background-color: black !important;
   border-radius: 50% !important;
   margin-top: 1px !important;
   margin-right: 1px !important ;
   margin-bottom: 1px !important;
-  padding: 10px !important;
+  padding: 12px !important; 
   padding-bottom: 13px !important;
-  padding-top: 8px !important;
+  padding-top: 9px !important;
   color: #fcd232  !important;
   opacity: 1 !important;
-  line-height: 0.8 !important;
+ line-height: 0.8 !important;
   
 }
 .Events{
@@ -350,16 +354,97 @@ label{
 }
 
 
-@media (max-width:576px){
-.main{
-  margin: 0;
-  display: flex;
-  justify-content: center;
+.Navbar label, #hamburger{
+  display: none;
 }
+
+@media screen and (max-width:768px){
+  .Navbar label {
+    text-align: end;
+    position: absolute;
+    right: 0;
+    display: inline-block;
+    color: #fcd232;
+    background-color: black;
+    border-radius: 5px;
+    padding: 9px;
+    
+    padding-bottom: 8px;
+  }
+  .Navbar button{
+    
+    margin-right: 25px;
+    margin-left: 5px;
+  }
+
+  .navitems{
+    
+    background-color: black;
+  }
+ .navitems .navlink {
+   box-sizing: border-box;
+   display: block;
+   color: white;
+   text-align: center;
+   width: 100%;
+ } 
+  .navitems {
+    display: none;
+  }
+
+  .Navbar input:checked ~ .navitems {
+    display: block;
+    }
+  
+}
+
+
+
+@media (max-width:576px){
+
 .marg{
   padding-bottom: 20px;
   }
 
+  .Navbar label {
+    text-align: end;
+    
+    display: inline-block;
+    color: #fcd232;
+    background-color: black;
+    border-radius: 5px;
+    padding: 8px;
+  }
+  .Navbar button{
+    display: none;
+  }
+
+  .navitems{
+    background-color: black;
+  }
+ .navitems .navlink {
+   box-sizing: border-box;
+   display: block;
+   color: white;
+   text-align: center;
+   width: 100%;
+ } 
+  .navitems {
+    display: none;
+  }
+
+  .Navbar input:checked ~ .navitems{
+    display: block;}
+  .Navbar input:checked ~ .Navbar button {
+    display: block;
+  }
+
+}
+@media (max-width:1000px) {
+  .main{
+    margin: 0;
+   
+  }
 }
 @media (max-width:768px) {
   .small-image{
@@ -373,12 +458,15 @@ label{
   .marg{
     padding-bottom: 5rem;
     }
+
+
 }
 @media (max-width:980px){
   .marg{
     padding-bottom: 3rem;
     }
 }
+
 
 
 
