--- a/brainster-space/src/App.css
+++ b/brainster-space/src/App.css
@@ -325,9 +325,11 @@ label {
   opacity: 1 !important;
   line-height: 0.8 !important;
 }
-.Events {
-  height: 100vh;
-  text-align: center;
+.Events h2{
+  width: 90%;
+  margin: 10px auto;
+  font-size: 2.5rem;
+  
 }
 .backToTop {
   color: #fcd232;
